I finished being able to archive and unarchive emails, code is very unreadable at this point so i need to fix this

--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -26,5 +26,13 @@ textarea {
     margin-top: 15px;
     right:18vw;
     display:inline-block;
+}
 
+#email-label{
+    font-style: bold;
+    
+}
+
+#archive-button{
+    background: red;
 }
